# cosc422-ass1

./: Bezier.cpp  CMakeLists.txt  CubePatches.h  README.md  Terrain.cpp
geom/: PatchVerts_Gumbo.txt  PatchVerts_Teapot.txt
shaders/: Bezier.frag  Bezier.geom  Bezier.tesc  Bezier.tese  Bezier.vert  Floor.vert  Terrain.frag  Terrain.geom  Terrain.tesc  Terrain.tese  Terrain.vert
textures/: arid_rock.tga  grass.tga  grassy_hills.tga  ice.tga  snow.tga  water.tga
